<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings" translatable="false">Topping</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate" translatable="false">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="add_whipped_cream">Add whipped cream? </string>
    <string name="add_chocolate">Add chocolate? </string>
    <string name="total">Total: $</string>
    <string name="thank_you">Thank You!</string>
    <string name="name_output">Name: </string>
    <string name="name_input">Name</string>
</resources>