<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="18dp"
        tools:context=".MainActivity">

       <EditText
           android:id="@+id/name_input_edit_text"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="18dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           android:inputType="textCapWords"
           android:hint="@string/name_input"/>


        <TextView
            android:id="@+id/toppings"
            android:layout_marginTop="18dp"
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_input_edit_text" />

        <LinearLayout
            android:id="@+id/topping_vertical_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toppings">

            <LinearLayout
                android:id="@+id/topping_horizontal_layout_whipped_cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/topping_vertical_layout">

                <CheckBox
                    android:id="@+id/whipped_cream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/whipped_cream"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+$1"
                    android:textSize="16sp"
                    android:layout_marginLeft="40dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/topping_horizontal_layout_chocolate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/topping_horizontal_layout_whipped_cream">

                <CheckBox
                    android:id="@+id/chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/chocolate"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+$2"
                    android:textSize="16sp"
                    android:layout_marginLeft="80dp"/>

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/quantity"
            android:layout_marginTop="18dp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topping_vertical_layout" />

        <LinearLayout
            android:id="@+id/numeroProdutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity">

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_marginTop="18dp"
            android:text="@string/order_summary"
            style="@style/HeaderTextStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numeroProdutos" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="$0"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_summary_text_view" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>